--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -8,9 +8,8 @@ RUN apk add --no-cache git
 
 # Copy go mod files
 COPY go.mod go.sum ./
-# FIX: Run go mod tidy to ensure all dependencies are fetched
+# FIX: Run go mod tidy to ensure all dependencies are downloaded correctly
 RUN go mod tidy
-RUN go mod download
 
 # Copy source code
 COPY . .
