--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -8,8 +8,9 @@ RUN apk add --no-cache git
 
 # Copy go mod files
 COPY go.mod go.sum ./
-# FIX: Run go mod tidy to ensure all dependencies are downloaded correctly
-RUN go mod tidy
+
+# Download dependencies
+RUN go mod download
 
 # Copy source code
 COPY . .
@@ -31,6 +32,7 @@ WORKDIR /root/
 
 # Copy the binary from builder
 COPY --from=builder /app/main .
+
 # Create necessary directories
 RUN mkdir -p /logs /maxmind
 
