--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,7 +23,9 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.544.0",
     "tailwind-merge": "^2.2.1",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-slot": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
