--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     branches:
-      - dev-oltp
+      - dev-agent
     paths:
       - 'agent/**'
       - 'dashboard/**'
@@ -13,7 +13,7 @@ on:
       - 'v*'
   pull_request:
     branches:
-      - dev-oltp
+      - dev-agent
   workflow_dispatch:
     inputs:
       release_cli:
