--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,7 +25,8 @@
     "tailwind-merge": "^2.2.1",
     "topojson-client": "^3.1.0",
     "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.2.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
