--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,12 +1,17 @@
 # ==============================================================================
 # Stage 1: Dependencies - Install production dependencies with build tools
 # ==============================================================================
-FROM node:22-alpine AS deps
+FROM node:22-slim AS deps
 
 WORKDIR /app
 
 # Install build dependencies for better-sqlite3
-RUN apk add --no-cache python3 make g++
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    python3 \
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install dependencies based on the preferred package manager
 COPY package.json package-lock.json* ./
@@ -18,12 +23,17 @@ RUN npm ci --only=production && \
 # ==============================================================================
 # Stage 2: Builder - Build the application
 # ==============================================================================
-FROM node:22-alpine AS builder
+FROM node:22-slim AS builder
 
 WORKDIR /app
 
 # Install build dependencies for better-sqlite3
-RUN apk add --no-cache python3 make g++
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    python3 \
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
@@ -33,9 +43,6 @@ COPY . .
 RUN npm ci && \
     npm cache clean --force
 
-# Rebuild better-sqlite3 for Alpine
-RUN npm rebuild better-sqlite3
-
 # Build Next.js application
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_ENV=production
@@ -43,9 +50,9 @@ ENV NODE_ENV=production
 RUN npm run build
 
 # ==============================================================================
-# Stage 3: Runner - Use slim debian instead of distroless for better-sqlite3
+# Stage 3: Runner - Use Debian slim for better-sqlite3 compatibility
 # ==============================================================================
-FROM node:22-alpine AS runner
+FROM node:22-slim AS runner
 
 WORKDIR /app
 
@@ -55,7 +62,13 @@ ENV NEXT_TELEMETRY_DISABLED=1
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-# Create non-root user
+# Install runtime dependencies for better-sqlite3
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user (Debian commands)
 RUN groupadd -g 1001 nodejs && \
     useradd -u 1001 -g nodejs nodejs
 
@@ -66,6 +79,9 @@ RUN mkdir -p /app/data && chown -R nodejs:nodejs /app/data
 COPY --from=builder --chown=nodejs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nodejs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nodejs:nodejs /app/public ./public
+
+# Copy node_modules with better-sqlite3 native bindings
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
 
 # Ensure data directory has correct permissions after copy
 RUN chown -R nodejs:nodejs /app/data
