--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "^15.1.8",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   },
