--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -1,4 +1,4 @@
-# Dashboard Environment Variables
+# Traefik Log Dashboard Environment Variables
 
 # API Configuration
 NEXT_PUBLIC_AGENT_API_URL=http://traefik-agent:5000
