--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,9 @@
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
     "date-fns": "^4.1.0",
+    "geolite2-redist": "^3.1.1",
     "lucide-react": "^0.468.0",
+    "maxmind": "^5.0.1",
     "next": "^15.1.8",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
