--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,10 @@ services:
       - PORT=5000
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api/logs/status"]
-      interval: 30s
+      interval: 2m  # PERFORMANCE FIX: Increased from 30s to 2min to reduce load
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 30s  # Increased to allow agent to fully start
     networks:
       - traefik-network
 
