--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -7,3 +7,13 @@ NEXT_PUBLIC_AGENT_API_TOKEN=
 # Display Configuration
 NEXT_PUBLIC_SHOW_DEMO_PAGE=true
 NEXT_PUBLIC_MAX_LOGS_DISPLAY=500
+
+# Security Configuration
+# Restrict CORS to specific origins in production (comma-separated)
+# Example: ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# Default: * (allow all - NOT recommended for production)
+ALLOWED_ORIGINS=*
+
+# Performance Configuration
+# Enable/disable background metrics processing (30min interval)
+ENABLE_BACKGROUND_SCHEDULER=true
