--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,10 +12,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-table": "^8.21.3",
     "better-sqlite3": "^11.10.0",
-    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
@@ -26,8 +28,8 @@
     "maxmind": "^5.0.1",
     "next": "^15.1.9",
     "react": "^19.0.1",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.1",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.5",
     "topojson-client": "^3.1.0"
