--- a/agent/.env.example
+++ b/agent/.env.example
@@ -5,16 +5,15 @@ PORT=5000
 TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/var/log/traefik/access.log
 TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/var/log/traefik/traefik.log
 
-# Log Format (json or clf)
+# Log Format (json or common)
 TRAEFIK_LOG_DASHBOARD_LOG_FORMAT=json
 
 # System Monitoring
 TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true
+TRAEFIK_LOG_DASHBOARD_MONITOR_INTERVAL=2000
 
 # Authentication Token (required for production)
 TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=your-secret-token-here
 
-# GeoIP Configuration
-TRAEFIK_LOG_DASHBOARD_GEOIP_ENABLED=true
-TRAEFIK_LOG_DASHBOARD_GEOIP_CITY_DB=GeoLite2-City.mmdb
-TRAEFIK_LOG_DASHBOARD_GEOIP_COUNTRY_DB=GeoLite2-Country.mmdb
+# Position File (for tracking read position)
+POSITION_FILE=/data/.position
