--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,15 +51,16 @@ services:
       - AGENT_API_URL=http://traefik-agent:5000
       - AGENT_API_TOKEN=d41d8cd98f00b204e9800998ecf8427e
       - AGENT_NAME=Default Agent
-      
+
       # Node Environment
       - NODE_ENV=production
       - PORT=3000
-      - GEOIP_DB_PATH=/geoip/GeoLite2-City.mmdb
-      
+
       # Display Configuration
       - NEXT_PUBLIC_SHOW_DEMO_PAGE=true
       - NEXT_PUBLIC_MAX_LOGS_DISPLAY=500
+
+      # GeoIP: Auto-downloaded by geolite2-redist, no config needed
     depends_on:
       traefik-agent:
         condition: service_healthy
