--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -31,13 +31,11 @@ FROM alpine:latest
 
 RUN apk --no-cache add ca-certificates
 
-WORKDIR /root/
+WORKDIR /app/
 
 # Copy the binary from builder
 COPY --from=builder /app/main .
 
-# Create necessary directories
-RUN mkdir -p /logs /maxmind
 
 # Expose port
 EXPOSE 5000
@@ -45,16 +43,11 @@ EXPOSE 5000
 # Set default environment variables
 ENV PORT=5000
 ENV TRAEFIK_LOG_FILE=
-ENV USE_MAXMIND=false
-ENV MAXMIND_DB_PATH=/maxmind/GeoLite2-City.mmdb
-ENV MAXMIND_FALLBACK_ONLINE=true
 
 # Set Go runtime environment variables for better memory management
 ENV GOGC=50
 ENV GOMEMLIMIT=500MiB
 
-# Add MaxMind database volume
-VOLUME ["/maxmind"]
 
 # Run the application
 CMD ["./main"]
