--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,28 +20,24 @@
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "d3": "^7.9.0",
-    "d3-geo": "^3.1.1",
     "date-fns": "^4.1.0",
     "geolite2-redist": "^3.1.1",
     "lucide-react": "^0.468.0",
+    "maplibre-gl": "^5.15.0",
     "maxmind": "^5.0.1",
     "next": "^15.1.9",
+    "next-themes": "^0.4.6",
     "react": "^19.0.1",
     "react-dom": "^19.0.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^2.5.5",
-    "topojson-client": "^3.1.0"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/d3": "^7.4.3",
-    "@types/d3-geo": "^3.1.0",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
-    "@types/topojson-client": "^3.1.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-config-next": "^15.1.8",
