--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@nivo/core": "^0.99.0",
+    "@nivo/geo": "^0.99.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -23,7 +25,6 @@
     "date-fns": "^4.1.0",
     "geolite2-redist": "^3.1.1",
     "lucide-react": "^0.468.0",
-    "maplibre-gl": "^5.15.0",
     "maxmind": "^5.0.1",
     "next": "^15.1.9",
     "next-themes": "^0.4.6",
@@ -31,13 +32,15 @@
     "react-dom": "^19.0.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/topojson-client": "^3.1.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-config-next": "^15.1.8",
