--- a/dashboard/components.json
+++ b/dashboard/components.json
@@ -17,5 +17,19 @@
     "lib": "@/lib",
     "hooks": "@/lib/hooks"
   },
-  "iconLibrary": "lucide"
+  "iconLibrary": "lucide",
+  "registries": {
+    "@shadcnblocks": {
+      "url": "https://shadcnblocks.com/r/{name}.json"
+    },
+    "@shadcn-studio": {
+      "url": "https://shadcnstudio.com/r/{name}.json"
+    },
+    "@ss-blocks": {
+      "url": "https://shadcnstudio.com/r/blocks/{name}.json"
+    },
+    "@shadcn-map": {
+      "url": "http://shadcn-map.vercel.app/r/{name}.json"
+    }
+  }
 }
