--- a/agent/.env.example
+++ b/agent/.env.example
@@ -8,6 +8,13 @@ TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/var/log/traefik/traefik.log
 # Log Format (json or common)
 TRAEFIK_LOG_DASHBOARD_LOG_FORMAT=json
 
+# Streaming (SSE) tuning
+TRAEFIK_LOG_DASHBOARD_STREAM_BATCH_LINES=400
+TRAEFIK_LOG_DASHBOARD_STREAM_FLUSH_INTERVAL_MS=1000
+TRAEFIK_LOG_DASHBOARD_STREAM_MAX_CLIENTS=50
+TRAEFIK_LOG_DASHBOARD_STREAM_MAX_DURATION_SEC=300
+TRAEFIK_LOG_DASHBOARD_STREAM_MAX_BYTES_PER_BATCH=524288
+
 # System Monitoring
 TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true
 TRAEFIK_LOG_DASHBOARD_MONITOR_INTERVAL=2000
