--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@nivo/core": "^0.99.0",
@@ -63,7 +65,8 @@
     "prettier": "^3.4.2",
     "shadcn": "^3.5.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.4"
   },
   "overrides": {
     "glob": "^10.4.5"
